host/features/eh_host_feat_wifi/include/eh_host_wifi.h

esp_err_t eh_host_wifi_restore(void);
esp_err_t eh_host_wifi_get_mode(wifi_mode_t *out);
esp_err_t eh_host_wifi_get_config(wifi_interface_t iface, wifi_config_t *out);
esp_err_t eh_host_wifi_sta_get_ap_info(wifi_ap_record_t *out);
esp_err_t eh_host_wifi_scan_stop(void);
esp_err_t eh_host_wifi_clear_ap_list(void);
esp_err_t eh_host_wifi_set_ps(wifi_ps_type_t type);
esp_err_t eh_host_wifi_get_ps(wifi_ps_type_t *out);
esp_err_t eh_host_wifi_set_max_tx_power(int8_t power);
esp_err_t eh_host_wifi_get_max_tx_power(int8_t *out);
esp_err_t eh_host_wifi_set_country_code(const char *country,
                                        bool ieee80211d_enabled);
esp_err_t eh_host_wifi_get_country_code(char *country);
esp_err_t eh_host_wifi_set_country(const wifi_country_t *country);
esp_err_t eh_host_wifi_get_country(wifi_country_t *country);
esp_err_t eh_host_wifi_set_storage(wifi_storage_t storage);
esp_err_t eh_host_wifi_set_protocol(wifi_interface_t ifx, uint8_t protocol_bitmap);
esp_err_t eh_host_wifi_get_protocol(wifi_interface_t ifx, uint8_t *protocol_bitmap);
esp_err_t eh_host_wifi_set_bandwidth(wifi_interface_t ifx, wifi_bandwidth_t bw);
esp_err_t eh_host_wifi_get_bandwidth(wifi_interface_t ifx, wifi_bandwidth_t *bw);
esp_err_t eh_host_wifi_set_channel(uint8_t primary, wifi_second_chan_t second);
esp_err_t eh_host_wifi_get_channel(uint8_t *primary, wifi_second_chan_t *second);
esp_err_t eh_host_wifi_set_inactive_time(wifi_interface_t ifx, uint16_t sec);
esp_err_t eh_host_wifi_get_inactive_time(wifi_interface_t ifx, uint16_t *sec);
esp_err_t eh_host_wifi_ap_get_sta_list(wifi_sta_list_t *sta);
esp_err_t eh_host_wifi_ap_get_sta_aid(const uint8_t mac[6], uint16_t *aid);
esp_err_t eh_host_wifi_deauth_sta(uint16_t aid);
esp_err_t eh_host_wifi_sta_get_aid(uint16_t *aid);
esp_err_t eh_host_wifi_sta_get_rssi(int *rssi);
esp_err_t eh_host_wifi_sta_get_negotiated_phymode(wifi_phy_mode_t *phymode);
esp_err_t eh_host_wifi_scan_get_ap_record(wifi_ap_record_t *ap_record);
esp_err_t eh_host_wifi_scan_get_ap_records(uint16_t *number,
                                           wifi_ap_record_t *ap_records);
esp_err_t eh_host_wifi_clear_fast_connect(void);
esp_err_t eh_host_wifi_set_band(wifi_band_t band);
esp_err_t eh_host_wifi_get_band(wifi_band_t *band);
esp_err_t eh_host_wifi_set_band_mode(wifi_band_mode_t band_mode);
esp_err_t eh_host_wifi_get_band_mode(wifi_band_mode_t *band_mode);
esp_err_t eh_host_wifi_set_protocols(wifi_interface_t ifx, wifi_protocols_t *protocols);
esp_err_t eh_host_wifi_get_protocols(wifi_interface_t ifx, wifi_protocols_t *protocols);
esp_err_t eh_host_wifi_set_bandwidths(wifi_interface_t ifx, wifi_bandwidths_t *bw);
esp_err_t eh_host_wifi_get_bandwidths(wifi_interface_t ifx, wifi_bandwidths_t *bw);
esp_err_t eh_host_wifi_set_okc_support(bool enable);
/* TODO(wifi-rpc): V1 union lacks twt_config payload. */
esp_err_t eh_host_wifi_sta_twt_config(wifi_twt_config_t *config);