host/linux/eh_host_linux_python_ctypes/eh_host/wifi.py


def clear_ap_list() -> None:
    rc = _clear_ap_list()
    if rc != 0:
        raise EhHostError("eh_host_wifi_clear_ap_list", rc)


def restore() -> None:
    """Restore CP-side wifi state to factory defaults."""
    rc = _restore()
    if rc != 0:
        raise EhHostError("eh_host_wifi_restore", rc)


def get_mode() -> int:
    """Read the current `wifi_mode_t` (e.g. WIFI_MODE_STA)."""
    out = c_int(0)
    rc = _get_mode(byref(out))
    if rc != 0:
        raise EhHostError("eh_host_wifi_get_mode", rc)
    return out.value


def get_config(iface: int) -> bytes:
    """Read the `wifi_config_t` for `iface` as raw bytes.

    Returned as bytes (not a typed struct) because the IDF
    `wifi_config_t` layout is sensitive to IDF version; callers that
    need fields can decode against `host/compat/include/esp_wifi_types.h`
    using the offsets pinned in this module.
    """
    buf = (c_uint8 * _WIFI_CFG_T_SIZE)()
    rc = _get_config(iface, buf)
    if rc != 0:
        raise EhHostError("eh_host_wifi_get_config", rc)
    return bytes(buf)


def sta_get_ap_info() -> bytes:
    """Read the `wifi_ap_record_t` for the connected AP as raw bytes.

    Like `get_config`, the struct layout is IDF-version-sensitive; the
    raw bytes are returned for callers that want to decode against the
    pinned `wifi_ap_record_t` definition.
    """
    buf = (c_uint8 * _WIFI_AP_RECORD_T_SIZE)()
    rc = _sta_get_ap_info(buf)
    if rc != 0:
        raise EhHostError("eh_host_wifi_sta_get_ap_info", rc)
    return bytes(buf)


def scan_stop() -> None:
    """Cancel an in-progress scan."""
    rc = _scan_stop()
    if rc != 0:
        raise EhHostError("eh_host_wifi_scan_stop", rc)


def set_ps(ps_type: int) -> None:
    """Set the wifi power-save mode (`WIFI_PS_NONE` / `_MIN_MODEM` / `_MAX_MODEM`)."""
    rc = _set_ps(ps_type)
    if rc != 0:
        raise EhHostError("eh_host_wifi_set_ps", rc)


def get_ps() -> int:
    """Read the current `wifi_ps_type_t`."""
    out = c_int(0)
    rc = _get_ps(byref(out))
    if rc != 0:
        raise EhHostError("eh_host_wifi_get_ps", rc)
    return out.value


def set_max_tx_power(power: int) -> None:
    """Set the maximum TX power (signed int8; units = 0.25 dBm)."""
    rc = _set_max_tx_power(power)
    if rc != 0:
        raise EhHostError("eh_host_wifi_set_max_tx_power", rc)


def get_max_tx_power() -> int:
    """Read the current maximum TX power (signed int8)."""
    out = c_int8(0)
    rc = _get_max_tx_power(byref(out))
    if rc != 0:
        raise EhHostError("eh_host_wifi_get_max_tx_power", rc)
    return out.value


def set_country_code(country: str, ieee80211d_enabled: bool = False) -> None:
    """Set the 2-letter ISO country code (e.g. \"US\", \"CN\").

    Pass `ieee80211d_enabled=True` to honour 802.11d-derived country
    info from associated APs.
    """
    rc = _set_country_code(country.encode("ascii"), ieee80211d_enabled)
    if rc != 0:
        raise EhHostError("eh_host_wifi_set_country_code", rc)


def get_country_code() -> str:
    """Read the 2-letter ISO country code currently in effect."""
    buf = (c_char * 3)()
    rc = _get_country_code(buf)
    if rc != 0:
        raise EhHostError("eh_host_wifi_get_country_code", rc)
    return buf.value.decode("ascii", errors="replace")


# ---- P5.2 wrappers (16) — see module docstring for deferred list ----

def clear_fast_connect() -> None:
    """Clear cached fast-connect / PMKSA state on the CP."""
    rc = _clear_fast_connect()
    if rc != 0:
        raise EhHostError("eh_host_wifi_clear_fast_connect", rc)


def deauth_sta(aid: int) -> None:
    """De-authenticate a connected STA on the SoftAP by association id.

    `aid=0` deauths every connected STA.
    """
    rc = _deauth_sta(aid)
    if rc != 0:
        raise EhHostError("eh_host_wifi_deauth_sta", rc)


def ap_get_sta_aid(mac: bytes) -> int:
    """Return the association id (AID) of a STA connected to the SoftAP.

    `mac` must be a 6-byte MAC address.
    """
    if len(mac) != 6:
        raise ValueError(f"mac must be 6 bytes, got {len(mac)}")
    mac_buf = (c_uint8 * 6)(*mac)
    out = c_uint16(0)
    rc = _ap_get_sta_aid(mac_buf, byref(out))
    if rc != 0:
        raise EhHostError("eh_host_wifi_ap_get_sta_aid", rc)
    return out.value


def sta_get_aid() -> int:
    """Return this STA's association id with its associated AP."""
    out = c_uint16(0)
    rc = _sta_get_aid(byref(out))
    if rc != 0:
        raise EhHostError("eh_host_wifi_sta_get_aid", rc)
    return out.value


def sta_get_rssi() -> int:
    """Return the RSSI (dBm) of the AP this STA is associated with."""
    out = c_int(0)
    rc = _sta_get_rssi(byref(out))
    if rc != 0:
        raise EhHostError("eh_host_wifi_sta_get_rssi", rc)
    return out.value


def sta_get_negotiated_phymode() -> int:
    """Return the `wifi_phy_mode_t` negotiated with the associated AP."""
    out = c_int(0)
    rc = _sta_get_negotiated_phymode(byref(out))
    if rc != 0:
        raise EhHostError("eh_host_wifi_sta_get_negotiated_phymode", rc)
    return out.value


def set_protocol(iface: int, protocol: int) -> None:
    """Set the wifi-protocol bitmap (`WIFI_PROTOCOL_*`) on `iface`."""
    rc = _set_protocol(iface, protocol)
    if rc != 0:
        raise EhHostError("eh_host_wifi_set_protocol", rc)


def get_protocol(iface: int) -> int:
    """Read the wifi-protocol bitmap (`WIFI_PROTOCOL_*`) from `iface`."""
    out = c_uint8(0)
    rc = _get_protocol(iface, byref(out))
    if rc != 0:
        raise EhHostError("eh_host_wifi_get_protocol", rc)
    return out.value


def set_bandwidth(iface: int, bw: int) -> None:
    """Set bandwidth (`WIFI_BW_HT20` / `WIFI_BW_HT40`) on `iface`."""
    rc = _set_bandwidth(iface, bw)
    if rc != 0:
        raise EhHostError("eh_host_wifi_set_bandwidth", rc)


def get_bandwidth(iface: int) -> int:
    """Read the bandwidth (`WIFI_BW_*`) from `iface`."""
    out = c_int(0)
    rc = _get_bandwidth(iface, byref(out))
    if rc != 0:
        raise EhHostError("eh_host_wifi_get_bandwidth", rc)
    return out.value


def set_channel(primary: int, second: int = WIFI_SECOND_CHAN_NONE) -> None:
    """Set the primary channel (1-14) and secondary-channel selector
    (`WIFI_SECOND_CHAN_*`)."""
    rc = _set_channel(primary, second)
    if rc != 0:
        raise EhHostError("eh_host_wifi_set_channel", rc)


def get_channel() -> tuple[int, int]:
    """Return `(primary, second)` — the primary channel (1-14) and the
    secondary-channel selector (`WIFI_SECOND_CHAN_*`)."""
    primary = c_uint8(0)
    second  = c_int(0)
    rc = _get_channel(byref(primary), byref(second))
    if rc != 0:
        raise EhHostError("eh_host_wifi_get_channel", rc)
    return primary.value, second.value


def set_inactive_time(iface: int, sec: int) -> None:
    """Set the inactive-timeout (seconds) on `iface`.  0 disables."""
    rc = _set_inactive_time(iface, sec)
    if rc != 0:
        raise EhHostError("eh_host_wifi_set_inactive_time", rc)


def get_inactive_time(iface: int) -> int:
    """Read the inactive-timeout (seconds) from `iface`."""
    out = c_uint16(0)
    rc = _get_inactive_time(iface, byref(out))
    if rc != 0:
        raise EhHostError("eh_host_wifi_get_inactive_time", rc)
    return out.value


def set_storage(storage: int) -> None:
    """Set wifi config persistence (`WIFI_STORAGE_RAM` / `_FLASH`)."""
    rc = _set_storage(storage)
    if rc != 0:
        raise EhHostError("eh_host_wifi_set_storage", rc)


def set_band(band: int) -> None:
    """Set the active band (`WIFI_BAND_2G` / `WIFI_BAND_5G`)."""
    rc = _set_band(band)
    if rc != 0:
        raise EhHostError("eh_host_wifi_set_band", rc)


def get_band() -> int:
    """Read the active band (`WIFI_BAND_*`)."""
    out = c_int(0)
    rc = _get_band(byref(out))
    if rc != 0:
        raise EhHostError("eh_host_wifi_get_band", rc)
    return out.value


def set_band_mode(mode: int) -> None:
    """Set band mode (`WIFI_BAND_MODE_2G_ONLY` / `_5G_ONLY` / `_AUTO`)."""
    rc = _set_band_mode(mode)
    if rc != 0:
        raise EhHostError("eh_host_wifi_set_band_mode", rc)


def get_band_mode() -> int:
    """Read the band mode (`WIFI_BAND_MODE_*`)."""
    out = c_int(0)
    rc = _get_band_mode(byref(out))
    if rc != 0:
        raise EhHostError("eh_host_wifi_get_band_mode", rc)
    return out.value


def set_okc_support(enable: bool) -> None:
    """Enable / disable opportunistic key caching (OKC) on the STA."""
    rc = _set_okc_support(bool(enable))
    if rc != 0:
        raise EhHostError("eh_host_wifi_set_okc_support", rc)


def scan_get_ap_record() -> bytes:
    """Read the next `wifi_ap_record_t` from the scan results as raw
    bytes.  Same shape as `sta_get_ap_info`; callers decode against the
    pinned `wifi_ap_record_t` definition.
    """
    buf = (c_uint8 * _WIFI_AP_RECORD_T_SIZE)()
    rc = _scan_get_ap_record(buf)
    if rc != 0:
        raise EhHostError("eh_host_wifi_scan_get_ap_record", rc)
    return bytes(buf)


# ---- P5.7 wrappers — wired through V1_MCU ext (struct + array RPCs) -

# IDF wifi_country_t layout (host/compat/include/esp_wifi_types.h:56-62):
#   char    cc[3];          @ 0
#   uint8_t schan;          @ 3
#   uint8_t nchan;          @ 4
#   int8_t  max_tx_power;   @ 5
#   wifi_country_policy_t (int enum) policy;  @ 8 (with 2-byte padding)
# sizeof = 12.

class WifiCountry(Structure):
    """Mirror of IDF `wifi_country_t`."""

    _fields_ = [
        ("cc",           c_char * 3),
        ("schan",        c_uint8),
        ("nchan",        c_uint8),
        ("max_tx_power", c_int8),
        ("policy",       c_int),
    ]


# wifi_protocols_t / wifi_bandwidths_t — both two scalars, no padding.

class WifiProtocols(Structure):
    """Mirror of IDF `wifi_protocols_t` (2.4 GHz + 5 GHz protocol bitmap)."""

    _fields_ = [
        ("ghz_2g", c_uint16),
        ("ghz_5g", c_uint16),
    ]


class WifiBandwidths(Structure):
    """Mirror of IDF `wifi_bandwidths_t` (2.4 GHz + 5 GHz bandwidth)."""

    _fields_ = [
        ("ghz_2g", c_int),
        ("ghz_5g", c_int),
    ]


class WifiTwtConfig(Structure):
    """Mirror of IDF `wifi_twt_config_t`."""

    _fields_ = [
        ("post_wakeup_event",     c_bool),
        ("twt_enable_keep_alive", c_bool),
    ]


# wifi_sta_list_t carries a target-dependent array (ESP_WIFI_MAX_CONN_NUM
# = 4 / 10 / 15).  Pinned conservative buffer size that fits all targets:
# 15 × sizeof(wifi_sta_info_t = 12 bytes typical) + sizeof(int num) = ~184.
# Bump headroom to 256.
_WIFI_STA_LIST_T_SIZE = 256


_set_country = _LIB.eh_host_wifi_set_country
_set_country.argtypes = [POINTER(WifiCountry)]
_set_country.restype  = c_int

_get_country = _LIB.eh_host_wifi_get_country
_get_country.argtypes = [POINTER(WifiCountry)]
_get_country.restype  = c_int

_ap_get_sta_list = _LIB.eh_host_wifi_ap_get_sta_list
_ap_get_sta_list.argtypes = [c_void_p]
_ap_get_sta_list.restype  = c_int

_scan_get_ap_records = _LIB.eh_host_wifi_scan_get_ap_records
_scan_get_ap_records.argtypes = [POINTER(c_uint16), c_void_p]
_scan_get_ap_records.restype  = c_int

_set_protocols = _LIB.eh_host_wifi_set_protocols
_set_protocols.argtypes = [c_int, POINTER(WifiProtocols)]
_set_protocols.restype  = c_int

_get_protocols = _LIB.eh_host_wifi_get_protocols
_get_protocols.argtypes = [c_int, POINTER(WifiProtocols)]
_get_protocols.restype  = c_int

_set_bandwidths = _LIB.eh_host_wifi_set_bandwidths
_set_bandwidths.argtypes = [c_int, POINTER(WifiBandwidths)]
_set_bandwidths.restype  = c_int

_get_bandwidths = _LIB.eh_host_wifi_get_bandwidths
_get_bandwidths.argtypes = [c_int, POINTER(WifiBandwidths)]
_get_bandwidths.restype  = c_int

_sta_twt_config = _LIB.eh_host_wifi_sta_twt_config
_sta_twt_config.argtypes = [POINTER(WifiTwtConfig)]
_sta_twt_config.restype  = c_int

